Fixed menubar overflow issue

--- a/client/less/common.less
+++ b/client/less/common.less
@@ -18,7 +18,7 @@ body {
   left: 0;
   top: 0;
   width: 100%;
-  /*border-bottom: 5px solid #2c3;*/
+  overflow: hidden;
   white-space: nowrap;
 }
 
